fix index layout issue

--- a/css/main.css
+++ b/css/main.css
@@ -308,7 +308,7 @@ a:hover, a:focus {
   background-image: linear-gradient(315deg, #984ED8 0%, #694ED8 25%, #3826B0 100%);
   padding: 20px 10px 60px 10px;
   width: 100%;
-  height: 100vh;
+  height: 640pt;
 }
 
 .mobile-apps {
@@ -316,7 +316,7 @@ a:hover, a:focus {
   position: relative;
   background-color: white;
   width: 100%;
-  height: 100vh;
+  height: 640pt;
 }
 
 .car-hmi {
@@ -324,7 +324,7 @@ a:hover, a:focus {
   position: relative;
   background: url(../img/indexCarHMIBg.jpg) #231f20 no-repeat center center;
   width: 100%;
-  height: 100vh;
+  height: 640pt;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -336,7 +336,7 @@ a:hover, a:focus {
   position: relative;
   background: url(../img/indexInstallationBg.jpg) #231f20 no-repeat center center;
   width: 100%;
-  height: 100vh;
+  height: 640pt;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -348,7 +348,7 @@ a:hover, a:focus {
   position: relative;
   background-color: white;
   width: 100%;
-  height: 100vh;
+  height: 640pt;
 }
 
 .footer-links {
@@ -360,7 +360,7 @@ a:hover, a:focus {
 
 .index-iphone-showcase {
   position: relative;
-  top: -230pt;
+  top: -210pt;
   right: -500pt;
 }
 
@@ -391,7 +391,7 @@ a:hover, a:focus {
 }
 
 .index-car-hmi {
-  top: 150pt;
+  top: 180pt;
 }
 
 .signin {
